udistrital/sga_cliente#96 transacción para registrar datos de un reintegro
