# swagger/swagger.yml
@@ -1046,6 +1046,24 @@ paths:
           description: '{string} delete success!'
         "404":
           description: not found resource
+  /tr_inscripcion/reintegro:
+    post:
+      tags:
+      - tr_inscripcion
+      description: create TrInscripcionReintegro
+      operationId: TrInscripcionController.PostReintegro
+      parameters:
+      - in: body
+        name: body
+        description: body for TrInscripcionReintegro content
+        required: true
+        schema:
+          $ref: '#/definitions/models.TrInscripcionReintegro'
+      responses:
+        "201":
+          description: '{int} models.TrInscripcionReintegro'
+        "400":
+          description: the request contains incorrect syntax
   /transferencia/:
     get:
       tags:
@@ -1405,6 +1423,14 @@ definitions:
       NumeroOrden:
         type: number
         format: double
+  models.TrInscripcionReintegro:
+    title: TrInscripcionReintegro
+    type: object
+    properties:
+      InscripcionEstudiante:
+        $ref: '#/definitions/models.Inscripcion'
+      ReintegroEstudiante:
+        $ref: '#/definitions/models.Reintegro'
   models.Transferencia:
     title: Transferencia
     type: object
@@ -1466,3 +1492,6 @@ tags:
 - name: tipo_icfes
   description: |
     TipoIcfesController operations for TipoIcfes
+- name: tr_inscripcion
+  description: |
+    TrInscripcionController operations for TipoTercero
